--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h1>Convertitore Locandine PDF<br><small>by Totaro Rocco</small></h1>
 
     <div class="tabs">
-      <button class="tab-btn active" onclick="openTab('single')">Locandina Singola</button>
-      <button class="tab-btn" onclick="openTab('grid')">Locandina 4×4</button>
+      <button class="tab-btn active" onclick="openTab('single', this)">Locandina Singola</button>
+      <button class="tab-btn" onclick="openTab('grid', this)">Locandina 4×4</button>
     </div>
 
     <!-- TAB SINGOLA -->
