--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Convertitore Locandine PDF<br><small>by Totaro Rocco</small></h1>
+    <h1>Crea locandina 100x140 con immagine 70x100 interna<br><small>by Totaro Rocco</small></h1>
 
     <div class="tabs">
       <button class="tab-btn active" onclick="openTab('single', this)">Locandina Singola</button>
@@ -48,5 +48,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
