--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Convertitore Locandine PDF - by Totaro Rocco</title>
+  <title>PosterMatic combo PDF - by Totaro Rocco</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Crea locandina 100x140 con immagine 70x100 interna<br><small>by Totaro Rocco</small></h1>
+    <h1>PosterMatic combo PDF<br><small>by Totaro Rocco</small></h1>
 
     <div class="tabs">
       <button class="tab-btn active" onclick="openTab('single', this)">Locandina Singola</button>
@@ -48,6 +48,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
