--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>PosterMatic combo PDF - by Totaro Rocco</title>
+  <title>Convertitore Locandine PDF - by Totaro Rocco</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
@@ -10,45 +10,48 @@
 </head>
 <body>
   <div class="container">
-    <h1>PosterMatic combo PDF<br><small>by Totaro Rocco</small></h1>
+    <h1>Convertitore Locandine PDF<br><small>by Totaro Rocco</small></h1>
 
     <div class="tabs">
       <button class="tab-btn active" onclick="openTab('single', this)">Locandina Singola</button>
-      <button class="tab-btn" onclick="openTab('grid', this)">Locandina 2×2</button>
+      <button class="tab-btn" onclick="openTab('grid2x2', this)">Locandina 2×2</button>
+      <button class="tab-btn" onclick="openTab('grid4x4', this)">Locandina 4×4</button>
+      <button class="tab-btn" onclick="openTab('grid5x5', this)">Locandina 5×5</button>
     </div>
 
     <!-- TAB SINGOLA -->
     <div id="single" class="tab-content active">
       <h2>Locandina Singola</h2>
-      <label>
-        Cornice (PNG):
-        <input type="file" id="frameSingle" onchange="previewFrame(this, 'previewFrameSingle')">
-        <img id="previewFrameSingle" class="preview-frame" src="assets/AAAcornice.png" alt="Anteprima cornice">
-      </label><br>
       <label>Immagini: <input type="file" id="imagesSingle" multiple></label><br>
       <button onclick="generateSingle()">Crea PDF</button>
     </div>
 
-    <!-- TAB GRIGLIA -->
-    <div id="grid" class="tab-content">
+    <!-- TAB 2x2 -->
+    <div id="grid2x2" class="tab-content">
       <h2>Locandina 2×2</h2>
-      <label>
-        Cornice (PNG):
-        <input type="file" id="frameGrid" onchange="previewFrame(this, 'previewFrameGrid')">
-        <img id="previewFrameGrid" class="preview-frame" src="assets/AAAcornice.png" alt="Anteprima cornice">
-      </label><br>
-      <label>Cartella Immagini (scegli più file): <input type="file" id="imagesGrid" multiple></label><br>
-      <button onclick="generateGrid()">Crea PDF</button>
+      <label>Immagini: <input type="file" id="imagesGrid2x2" multiple></label><br>
+      <button onclick="generateGrid(2)">Crea PDF</button>
+    </div>
+
+    <!-- TAB 4x4 -->
+    <div id="grid4x4" class="tab-content">
+      <h2>Locandina 4×4</h2>
+      <label>Immagini: <input type="file" id="imagesGrid4x4" multiple></label><br>
+      <button onclick="generateGrid(4)">Crea PDF</button>
+    </div>
+
+    <!-- TAB 5x5 -->
+    <div id="grid5x5" class="tab-content">
+      <h2>Locandina 5×5</h2>
+      <label>Immagini: <input type="file" id="imagesGrid5x5" multiple></label><br>
+      <button onclick="generateGrid(5)">Crea PDF</button>
     </div>
 
     <footer>
       <img src="assets/fumetto.jpg" alt="Fumetto decorativo">
     </footer>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
