--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="tabs">
       <button class="tab-btn active" onclick="openTab('single', this)">Locandina Singola</button>
       <button class="tab-btn" onclick="openTab('grid2x2', this)">Locandina 2×2</button>
+      <button class="tab-btn" onclick="openTab('grid3x3', this)">Locandina 3×3</button>
       <button class="tab-btn" onclick="openTab('grid4x4', this)">Locandina 4×4</button>
       <button class="tab-btn" onclick="openTab('grid5x5', this)">Locandina 5×5</button>
     </div>
@@ -22,28 +23,60 @@
     <!-- TAB SINGOLA -->
     <div id="single" class="tab-content active">
       <h2>Locandina Singola</h2>
-      <label>Immagini: <input type="file" id="imagesSingle" multiple></label><br>
+      <label>
+        Cornice:
+        <input type="file" id="frameSingle" accept="image/*" onchange="previewFrame(this, 'previewFrameSingle')">
+        <img id="previewFrameSingle" class="preview-frame" src="assets/cornice.png" alt="Anteprima cornice">
+      </label>
+      <label>Immagini: <input type="file" id="imagesSingle" multiple accept="image/*"></label><br>
       <button onclick="generateSingle()">Crea PDF</button>
     </div>
 
     <!-- TAB 2x2 -->
     <div id="grid2x2" class="tab-content">
       <h2>Locandina 2×2</h2>
-      <label>Immagini: <input type="file" id="imagesGrid2x2" multiple></label><br>
+      <label>
+        Cornice:
+        <input type="file" id="frameGrid2x2" accept="image/*" onchange="previewFrame(this, 'previewFrameGrid2x2')">
+        <img id="previewFrameGrid2x2" class="preview-frame" src="assets/cornice.png" alt="Anteprima cornice">
+      </label>
+      <label>Immagini: <input type="file" id="imagesGrid2x2" multiple accept="image/*"></label><br>
       <button onclick="generateGrid(2)">Crea PDF</button>
+    </div>
+
+    <!-- TAB 3x3 -->
+    <div id="grid3x3" class="tab-content">
+      <h2>Locandina 3×3</h2>
+      <label>
+        Cornice:
+        <input type="file" id="frameGrid3x3" accept="image/*" onchange="previewFrame(this, 'previewFrameGrid3x3')">
+        <img id="previewFrameGrid3x3" class="preview-frame" src="assets/cornice.png" alt="Anteprima cornice">
+      </label>
+      <label>Immagini: <input type="file" id="imagesGrid3x3" multiple accept="image/*"></label><br>
+      <button onclick="generateGrid(3)">Crea PDF</button>
     </div>
 
     <!-- TAB 4x4 -->
     <div id="grid4x4" class="tab-content">
       <h2>Locandina 4×4</h2>
-      <label>Immagini: <input type="file" id="imagesGrid4x4" multiple></label><br>
+      <label>
+        Cornice:
+        <input type="file" id="frameGrid4x4" accept="image/*" onchange="previewFrame(this, 'previewFrameGrid4x4')">
+        <img id="previewFrameGrid4x4" class="preview-frame" src="assets/cornice.png" alt="Anteprima cornice">
+      </label>
+      <label>Immagini: <input type="file" id="imagesGrid4x4" multiple accept="image/*"></label><br>
       <button onclick="generateGrid(4)">Crea PDF</button>
     </div>
 
     <!-- TAB 5x5 -->
     <div id="grid5x5" class="tab-content">
       <h2>Locandina 5×5</h2>
-      <label>Immagini: <input type="file" id="imagesGrid5x5" multiple></label><br>
+      <label>
+        Cornice:
+        <input type="file" id="frameGrid5x5" accept="image/*" onchange="previewFrame(this, 'previewFrameGrid5x5')">
+        <img id="previewFrameGrid5x5" class="preview-frame" src="assets/cornice.png" alt="Anteprima cornice">
+      </label>
+      <label>Immagini: <input type="file" id="imagesGrid5x5" multiple accept="image/*"></label><br>
       <button onclick="generateGrid(5)">Crea PDF</button>
     </div>
 
