--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <h1>Convertitore Locandine PDF<br><small>by Totaro Rocco</small></h1>
 
     <div class="tabs">
-      <button class="tab-btn active" onclick="openTab('single', this)">Locandina Singola</button>
-      <button class="tab-btn" onclick="openTab('grid2x2', this)">Locandina 2×2</button>
-      <button class="tab-btn" onclick="openTab('grid3x3', this)">Locandina 3×3</button>
-      <button class="tab-btn" onclick="openTab('grid4x4', this)">Locandina 4×4</button>
-      <button class="tab-btn" onclick="openTab('grid5x5', this)">Locandina 5×5</button>
+      <button class="tab-btn active" onclick="openTab('single', this)">Singola</button>
+      <button class="tab-btn" onclick="openTab('grid2x2', this)">2×2</button>
+      <button class="tab-btn" onclick="openTab('grid3x3', this)">3×3</button>
+      <button class="tab-btn" onclick="openTab('grid4x4', this)">4×4</button>
+      <button class="tab-btn" onclick="openTab('grid5x5', this)">5×5</button>
     </div>
 
     <!-- TAB SINGOLA -->
