--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <title>Convertitore Locandine PDF/JPG - by Totaro Rocco</title>
+  <title>PosterMatic Convert - by Totaro Rocco</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="style.css" />
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Convertitore Locandine<br><small>by Totaro Rocco</small></h1>
+    <h1>PosterMatic Convert<br><small>by Totaro Rocco</small></h1>
 
     <div class="tabs">
       <button class="tab-btn active" onclick="openTab('single', this)">Singola</button>
@@ -23,7 +23,7 @@
 
     <!-- SINGOLA -->
     <div id="single" class="tab-content active">
-      <h2>Locandina Singola</h2>
+      <h2>Locandina 1x1</h2>
       <label>
         Cornice:
         <input type="file" id="frameSingle" accept="image/*" onchange="previewFrame(this, 'previewFrameSingle')" />
@@ -107,3 +107,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
