--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <title>PosterMatic Convert - by Totaro Rocco</title>
+  <title>Convertitore Locandine PDF/JPG - by Totaro Rocco</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="style.css" />
@@ -10,11 +10,12 @@
 </head>
 <body>
   <div class="container">
-    <h1>PosterMatic Convert<br><small>by Totaro Rocco</small></h1>
+    <h1>Convertitore Locandine<br><small>by Totaro Rocco</small></h1>
 
     <div class="tabs">
       <button class="tab-btn active" onclick="openTab('single', this)">Singola</button>
       <button class="tab-btn" onclick="openTab('grid2x2', this)">2×2</button>
+      <button class="tab-btn" onclick="openTab('grid3x2', this)">3×2</button>
       <button class="tab-btn" onclick="openTab('grid3x3', this)">3×3</button>
       <button class="tab-btn" onclick="openTab('grid4x3', this)">4×3</button>
       <button class="tab-btn" onclick="openTab('grid4x4', this)">4×4</button>
@@ -23,7 +24,7 @@
 
     <!-- SINGOLA -->
     <div id="single" class="tab-content active">
-      <h2>Locandina 1x1</h2>
+      <h2>Locandina Singola</h2>
       <label>
         Cornice:
         <input type="file" id="frameSingle" accept="image/*" onchange="previewFrame(this, 'previewFrameSingle')" />
@@ -45,6 +46,19 @@
       <label>Immagini: <input type="file" id="imagesGrid2x2" multiple accept="image/*" /></label><br />
       <button class="btn-pdf" onclick="generateGrid(2,2)">Crea PDF</button>
       <button class="btn-jpg" onclick="generateGridJpg(2,2)">Crea JPG</button>
+    </div>
+
+    <!-- 3x2 -->
+    <div id="grid3x2" class="tab-content">
+      <h2>Locandina 3×2</h2>
+      <label>
+        Cornice:
+        <input type="file" id="frameGrid3x2" accept="image/*" onchange="previewFrame(this, 'previewFrameGrid3x2')" />
+        <img id="previewFrameGrid3x2" class="preview-frame" src="assets/AAAcornice.png" alt="Anteprima cornice" />
+      </label>
+      <label>Immagini: <input type="file" id="imagesGrid3x2" multiple accept="image/*" /></label><br />
+      <button class="btn-pdf" onclick="generateGrid(3,2)">Crea PDF</button>
+      <button class="btn-jpg" onclick="generateGridJpg(3,2)">Crea JPG</button>
     </div>
 
     <!-- 3x3 -->
@@ -107,4 +121,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
