--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <h1>Convertitore Locandine<br><small>by Totaro Rocco</small></h1>
 
     <div class="tabs">
-      <button class="tab-btn active" onclick="openTab('single', this)">Singola</button>
-      <button class="tab-btn" onclick="openTab('grid2x2', this)">2×2</button>
-      <button class="tab-btn" onclick="openTab('grid3x2', this)">3×2</button>
-      <button class="tab-btn" onclick="openTab('grid3x3', this)">3×3</button>
-      <button class="tab-btn" onclick="openTab('grid4x3', this)">4×3</button>
-      <button class="tab-btn" onclick="openTab('grid4x4', this)">4×4</button>
-      <button class="tab-btn" onclick="openTab('grid5x5', this)">5×5</button>
+      <button class="tab-btn active" onclick="openTab('single', this)">1</button>
+      <button class="tab-btn" onclick="openTab('grid2x2', this)">4</button>
+      <button class="tab-btn" onclick="openTab('grid3x2', this)">6</button>
+      <button class="tab-btn" onclick="openTab('grid3x3', this)">9</button>
+      <button class="tab-btn" onclick="openTab('grid4x3', this)">12</button>
+      <button class="tab-btn" onclick="openTab('grid4x4', this)">16</button>
+      <button class="tab-btn" onclick="openTab('grid5x5', this)">25</button>
     </div>
 
     <!-- SINGOLA -->
@@ -121,3 +121,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
