--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <title>Convertitore Locandine PDF/JPG - by Totaro Rocco</title>
+  <title>PosterMatic Creator - by Totaro Rocco</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="style.css" />
@@ -13,8 +13,14 @@
     <!-- intestazione -->
     <header class="header">
       <img src="assets/fumetto.jpg" alt="Fumetto logo" class="logo-fumetto" />
-      <h1>Convertitore Locandine<br><small>by Totaro Rocco</small></h1>
+      <h1>PosterMatic Creator<br><small>by Totaro Rocco</small></h1>
     </header>
+    
+<div class="contact-container">
+        <a href="mailto:r.totaro@giometticinema.com">Email: r.totaro@giometticinema.com</a>
+        <a href="https://wa.me/3804112346" target="_blank">WhatsApp: 3804112346</a>
+        <a href="tel:3804112346">Telefono: 3804112346</a>
+    </div>
 
     <!-- pulsanti numerici -->
     <div class="tabs">
@@ -130,3 +136,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
