--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     
 <div class="contact-container">
-        <a href="mailto:r.totaro@giometticinema.com">Email: r.totaro@giometticinema.com</a>
+        <a href="mailto:r.totaro@giometticinema.com">Email: cinema.totaro@gmail.com</a>
         <a href="https://wa.me/3804112346" target="_blank">WhatsApp: 3804112346</a>
         <a href="tel:3804112346">Telefono: 3804112346</a>
     </div>
@@ -136,4 +136,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
