--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </header>
     
 <div class="contact-container">
-        <a href="mailto:r.totaro@giometticinema.com">Email: cinema.totaro@gmail.com</a>
-        <a href="https://wa.me/3804112346" target="_blank">WhatsApp: 3804112346</a>
-        <a href="tel:3804112346">Telefono: 3804112346</a>
+        <a href="mailto:cinema.totaro@gmail.com">Scrimi una mail   </a>
+        <a href="https://wa.me/3804112346" target="_blank">Scrivimi su WhatsApp   </a>
+        <a href="tel:3804112346">Chiamami</a>
     </div>
 
     <!-- pulsanti numerici -->
@@ -136,5 +136,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
