--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <title>PosterMatic Creator - by Totaro Rocco</title>
+  <title>PosterMatic Creator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="style.css" />
@@ -15,7 +15,7 @@
       <a href="https://sigrafilm.com/" target="_blank">
         <img src="assets/fumetto.jpg" alt="Fumetto logo" class="logo-fumetto" />
       </a>
-      <h1>PosterMatic Creator<br><small>by Totaro Rocco</small></h1>
+      <h1>PosterMatic Creator<br><small></small></h1>
     </header>
     
     <div class="contact-container">
@@ -144,3 +144,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
